fix portfolio left side align on mobile

--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -25,7 +25,7 @@
 		position: relative;
 		display: grid;
 		grid-template-rows: 1fr 30px;
-		grid-template-columns: 0.15fr 1fr 0.15fr;
+		grid-template-columns: auto 1fr auto;
 		&-content {
 			grid-column: 2;
 			grid-row: 1;
@@ -65,7 +65,7 @@
 			cursor: pointer;
 			&-img {
 				transform: rotate(180deg);
-				margin-right: 4vw;
+				width: clamp(30px, 80%, 50px);
 			}
 		}
 		&-arrow-right {
@@ -76,7 +76,7 @@
 			grid-row: 1;
 			cursor: pointer;
 			&-img {
-				margin-left: 4vw;
+				width: clamp(30px, 80%, 50px);
 			}
 		}
 		&-dots {
